# telemetry-collector

./: .gitignore  Cargo.toml  Readme.md  build.ps1  dockerfile  entrypoint.sh
.cargo/: config.toml
collector-core/: Cargo.toml
collector-core/src/: lib.rs  main.rs
collector-webapi/: Cargo.toml
collector-webapi/src/: main.rs
